--- a/app/components/elements/PageLoading/PageLoading.module.scss
+++ b/app/components/elements/PageLoading/PageLoading.module.scss
@@ -9,9 +9,16 @@
   top: 0px;
   z-index: 9;
   pointer-events: none;
-  transition: 0.5s;
   &.hidden {
-   opacity: 0;
+    animation: fadeOut 1s forwards;
+  }
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 }
 .logo {
