Noto Sans JPの太さ調整

--- a/app/components/elements/SectionTitle/SectionTitle.module.scss
+++ b/app/components/elements/SectionTitle/SectionTitle.module.scss
@@ -3,6 +3,7 @@
 .wrapper {
   color: v.$color_lightGray;
   font-size: 4rem;
+  font-weight: 300;
   line-height: 1.6;
   letter-spacing: 0.1em;
   text-align: center;
