--- a/app/components/sections/PhotoList/PhotoList.module.scss
+++ b/app/components/sections/PhotoList/PhotoList.module.scss
@@ -2,6 +2,13 @@
 
 .wrapper {
   padding: 150px 0px 0px;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: 1s 0.5s;
+  &.animation {
+    transform: translateY(0px);
+    opacity: 1;
+  }  
   @media (max-width: 999px) {
     padding-top: 90px;
   }
