--- a/feature/sidekick/Description/Description.module.scss
+++ b/feature/sidekick/Description/Description.module.scss
@@ -10,11 +10,11 @@
   line-height: 1.6;
   letter-spacing: 0.1em;
   text-align: center;
-  margin-bottom: 70px;
+  margin-bottom: 60px;
   position: relative;
   @media (max-width: 999px) {
     font-size: 1.6rem;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
   &:before {
     content: "";
@@ -61,13 +61,13 @@
     height: 100vw;
     margin-bottom: 0px;
   }
-}
-.image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: relative;
-  z-index: 1;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+    z-index: 1;
+  }  
 }
 .leadWrapper {
   width: 50%;
