--- a/app/components/blocks/SiteNavigation/SiteNavigation.module.scss
+++ b/app/components/blocks/SiteNavigation/SiteNavigation.module.scss
@@ -1,46 +1,20 @@
 @use '@/app/styles/variables' as v;
 
 .hamburger {
-  width: 40px;
-  height: 36px;
-  border-radius: 100%;
+  width: 80px;
+  height: 70px;  
   position: fixed;
-  right: 26px;
-  top: 14px;
+  right: 0px;
+  top: 0px;
   z-index: 10;
   cursor: pointer;
   @media (max-width: 999px) {
-    width: 24px;
-    height: 26px;
-    right: 12px;
-    top: 7px;
-  }
-  &:before,
-  &:after {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background-color: #ffffff;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: 0.3s;
-  }
-  &:before {
-    top: 12px;
-    @media (max-width: 999px) {
-      top: 9px;
-    }
-  }
-  &:after {
-    bottom: 12px;
-    @media (max-width: 999px) {
-      bottom: 9px;
-    }
+    width: 60px;
+    height: 50px;
   }
   @media (min-width: 769px) {
     transition: 0.3s;
-    &:hover {
+    &:hover .hamburgerIcon {
       &:before {
         transform: translate(-50%, -2px);
       }
@@ -48,20 +22,56 @@
         transform: translate(-50%, 2px);
       }
     }
-  }
-  &.active {
+  }  
+  &Icon {
+    width: 40px;
+    height: 36px;
+    border-radius: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    @media (max-width: 999px) {
+      width: 24px;
+      height: 26px;
+    }
+    &:before,
+    &:after {
+      content: "";
+      width: 100%;
+      height: 2px;
+      background-color: #ffffff;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: 0.3s;
+    }
     &:before {
-      top: 10px;
-      transform: translate(-50%, 7px) rotate(45deg);
+      top: 12px;
       @media (max-width: 999px) {
-        top: 5px;
+        top: 9px;
       }
     }
     &:after {
-      bottom: 10px;
-      transform: translate(-50%, -7px) rotate(-45deg);
+      bottom: 12px;
       @media (max-width: 999px) {
-        bottom: 5px;
+        bottom: 9px;
+      }
+    }
+    &.active {
+      &:before {
+        top: 10px !important;
+        transform: translate(-50%, 7px) rotate(45deg) !important;
+        @media (max-width: 999px) {
+          top: 5px !important;
+        }
+      }
+      &:after {
+        bottom: 10px !important;
+        transform: translate(-50%, -7px) rotate(-45deg) !important;
+        @media (max-width: 999px) {
+          bottom: 5px !important;
+        }
       }
     }
   }
