--- a/app/components/elements/ReloadButton/ReloadButton.module.scss
+++ b/app/components/elements/ReloadButton/ReloadButton.module.scss
@@ -1,7 +1,10 @@
 .wrapper {
+  width: 60px;
+  height: 70px;
+  line-height: 0;
   position: fixed;
-  right: 85px;
-  top: 13px;
+  right: 80px;
+  top: 0px;
   z-index: 10;
   cursor: pointer;
   display: none;
@@ -9,13 +12,18 @@
     display: block;
   }
   @media (max-width: 999px) {
-    right: 50px;
-    top: 5px;
+    width: 40px;
+    height: 50px;    
+    right: 60px;
   }
 }
 .icon {
   width: 40px;
   height: 40px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);  
   @media (max-width: 999px) {
     width: 30px;
     height: 30px;
