--- a/app/components/layouts/SiteHeader/SiteHeader.module.scss
+++ b/app/components/layouts/SiteHeader/SiteHeader.module.scss
@@ -11,22 +11,27 @@
   opacity: 0;
   transition: 1s;
   @media (max-width: 999px) {
-    height: 40px;
+    height: 50px;
   }
   &.animation {
     opacity: 1;
   }
 }
-.logoWrapper,
-.link {
+.logoWrapper {
+  width: 122px;
+  height: 70px;
+  line-height: 0;
+  padding-left: 26px;
   display: flex;
   align-items: center;
   position: absolute;
-  left: 26px;
-  top: 15px;
+  left: 0px;
+  top: 0px;
+  box-sizing: content-box;
   @media (max-width: 999px) {
-    left: 8px;
-    top: 7px;
+    width: 90px;
+    height: 50px;
+    padding-left: 10px;
   }
 }
 .logo {
@@ -41,14 +46,5 @@
   width: 80px;
   @media (max-width: 999px) {
     width: 60px;
-  }
-}
-.link {
-  width: 125px;
-  height: 40px;
-  z-index: -1;
-  @media (max-width: 999px) {
-    width: 90px;
-    height: 28px;
   }
 }
