--- a/feature/sidekick/Mainvisual/Mainvisual.module.scss
+++ b/feature/sidekick/Mainvisual/Mainvisual.module.scss
@@ -34,7 +34,7 @@
   font-size: 2.4vw;
   line-height: 1;
   letter-spacing: -0.5em;
-  mix-blend-mode: hard-light;
+  mix-blend-mode: exclusion;
   position: absolute;
   left: 3vw;
   z-index: 2;
@@ -72,7 +72,7 @@
   font-weight: 300;
   line-height: 1;
   text-align: right;
-  mix-blend-mode: hard-light;
+  mix-blend-mode: exclusion;
   position: absolute;
   right: 0vw;
   bottom: 0vw;
