sidekickのメインビジュアルイラストがPC時に一瞬SP画像が見える事象の対策

--- a/feature/sidekick/Mainvisual/Mainvisual.module.scss
+++ b/feature/sidekick/Mainvisual/Mainvisual.module.scss
@@ -120,7 +120,7 @@
   object-fit: cover;
   display: block;
   opacity: 0;
-  transition: 3s;
+  transition: 2s 1s;
   &.visible {
     opacity: 1;
   }  
