--- a/feature/sidekick/Movie/Movie.module.scss
+++ b/feature/sidekick/Movie/Movie.module.scss
@@ -25,8 +25,10 @@
   position: relative;
   @media (max-width: 767px) {
     width: 100%;
+    height: 90vw;
     margin-right: 0%;
-    padding-bottom: 60%;
+    margin-bottom: 30px;
+    padding-bottom: 0%;
   }
   &:nth-child(2n) {
     margin-right: 0%;
