--- a/feature/top/Mainvisual/Mainvisual.module.scss
+++ b/feature/top/Mainvisual/Mainvisual.module.scss
@@ -25,12 +25,21 @@
     margin-bottom: 0vh;
   }
 }
-.logo {
+.inner {
   position: absolute;
   left: 50%;
   top: 50%;
   z-index: 2;
   transform: translate(-50%, -50%);
+}
+.logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 15px;
+  @media (max-width: 768px) {
+    margin-bottom: 10px;
+  }
   svg {
     width: 100px;
     margin-bottom: 5px;
@@ -42,6 +51,22 @@
       width: 70px;
     }
   }
+}
+.lead {
+  font-size: 1.3rem;
+  letter-spacing: 0.1em;
+  text-align: center;
+  opacity: 0;
+  transform: scaleY(0);
+  transform-origin: 0% 100%;
+  transition: 1s 1s;
+  @media (max-width: 768px) {
+    font-size: 1.2rem;
+  }
+  &.animation {
+    opacity: 1;
+    transform: scaleY(1);
+  }  
 }
 .scrollIcon {
   width: 1px;
