--- a/app/components/sections/PhotoPreview/PhotoPreview.module.scss
+++ b/app/components/sections/PhotoPreview/PhotoPreview.module.scss
@@ -22,12 +22,15 @@
   width: 100%;
   height: 100%;
   position: relative;
-  @media (min-width: 1000px) {
-    transform: translateX(0px) !important;
+  transition: 0.5s;
+  &.slideImageToRight {
+    opacity: 0;
+    transform: translateX(100%);
   }
-  @media (max-width: 999px) {
-    transition: 0.1s;
-  }
+  &.slideImageToLeft {
+    opacity: 0;
+    transform: translateX(-100%);
+  }  
   img {
     max-width: 100%;
     width: auto !important;
