--- a/feature/sidekick/Mainvisual/Mainvisual.module.scss
+++ b/feature/sidekick/Mainvisual/Mainvisual.module.scss
@@ -29,12 +29,13 @@
   position: static !important;
 }
 .catchphrase {
-  width: calc(100% - 300px);
   color: v.$color_lightGray;
   font-size: 2.4vw;
   line-height: 1;
   letter-spacing: -0.5em;
   mix-blend-mode: exclusion;
+  backdrop-filter: blur(5px);
+  padding: 0.3vw;
   position: absolute;
   left: 3vw;
   z-index: 2;
@@ -53,11 +54,10 @@
   &.row2 {
     top: 6vw;
     @media (max-width: 767px) {
-      top: 20vw;
+      top: 19vw;
     }
   }
   @media (max-width: 767px) {
-    width: calc(100% - 120px);
     font-size: 4.5vw;
   }
   &.animation {
