--- a/feature/sidekick/Mainvisual/Mainvisual.module.scss
+++ b/feature/sidekick/Mainvisual/Mainvisual.module.scss
@@ -29,7 +29,7 @@
   position: static !important;
 }
 .catchphrase {
-  color: v.$color_lightGray;
+  color: #fff;
   font-size: 2.4vw;
   line-height: 1;
   letter-spacing: -0.5em;
@@ -66,7 +66,7 @@
 }
 .title {
   width: 100%;
-  color: v.$color_lightGray;
+  color: #fff;
   font-size: 6vw;
   font-weight: 300;
   line-height: 1;
