写真一覧ナビゲーションの下線の色を変更

--- a/app/components/elements/PhotoListNavigation/PhotoListNavigation.module.scss
+++ b/app/components/elements/PhotoListNavigation/PhotoListNavigation.module.scss
@@ -28,7 +28,7 @@
     content: '';
     width: 100%;
     height: 1px;
-    background-color: #fff;
+    background-color: v.$color_lightGray;
     position: absolute;
     left: 0px;
     bottom: -3px;
